<resources>
    <string name="app_name">Mdp Project</string>


    //menu
    <string name="title_steps">Steps</string>
    <string name="title_stats">Stats</string>
    <string name="title_info">Info</string>
    <string name="title_Settings">Settings</string>
    <string name="first_name">First Name:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="in_centimeters">In centimeters</string>
    <string name="weight">Weight:</string>
    <string name="in_kilograms">In kilograms</string>
    <string name="goal">Goal</string>
    <string name="number_of_steps">Number of steps</string>
    <string name="submit">Submit</string>
    <string name="personal_info"><b>Personal Info</b></string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user_goal">User Goal</string>
    <string name="global_goal">Global Goal</string>
    <string name="zero_0">0</string>
    <string name="user_steps">User Steps :</string>
    <string name="calories_burned">Calories Burned :</string>
    <string name="distance">Distance :</string>
    <string name="user_goal_tv">User Goal :</string>
    <string name="global_goal_tv">Global Goal :</string>
    <string name="location_history">Location History</string>
    <string name="week_stats">Week Stats</string>
    <string name="overall_stats">Overall Stats</string>
    <string name="total_steps">Total Steps :</string>
    <string name="total_distance">Total Distance :</string>
</resources>