<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_steps">

    <fragment
        android:id="@+id/navigation_steps"
        android:name="com.example.mdpproject.ui.home.HomeFragment"
        android:label="@string/title_steps"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.mdpproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.mdpproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_notifications" />
</navigation>