<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/grey_bg"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/home_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/home_user_progress"
                android:layout_width="180dp"
                android:layout_height="186dp"
                app:cpb_background_progressbar_color="#b6bbd8"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="@color/teal_200"
                app:cpb_progressbar_width="10dp"
                app:cpb_round_border="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/home_user_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_0"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/home_usergoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/black"
            android:text="@string/user_goal"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/home_global_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
       android:progressTint="@color/magenta"
            />

        <TextView
            android:id="@+id/home_global_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/black"
            android:text="@string/global_goal"
            android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="1dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_user_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/user_steps"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        />


                    <TextView
                        android:id="@+id/home_user_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_burned"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />

                    <TextView
                        android:id="@+id/home_user_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />

                    <TextView
                        android:id="@+id/home_user_goal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/user_goal_tv"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />

                    <TextView
                        android:id="@+id/home_user_global"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/global_goal_tv"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_user_steps_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zero_0"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />


                    <TextView
                        android:id="@+id/home_user_calories_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zero_0"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />


                    <TextView
                        android:id="@+id/home_user_distance_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zero_0"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />

                    <TextView
                        android:id="@+id/home_user_goal_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zero_0"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />

                    <TextView
                        android:id="@+id/home_global_goal_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zero_0"
                        android:textColor="@color/black"
                        android:textSize="17sp"  />

                </LinearLayout>

            </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>