<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/dashboard_barchart"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dashboard_button_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/week" />

                <Button
                    android:id="@+id/dashboard_button_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/month" />

                <Button
                    android:id="@+id/dashboard_button_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/year" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dashboard_user_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="User Steps :" />


                    <TextView
                        android:id="@+id/dashboard_user_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Calories Burned :" />

                    <TextView
                        android:id="@+id/dashboard_user_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Distance :" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dashboard_user_steps_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="User Steps" />


                    <TextView
                        android:id="@+id/dashboard_user_calories_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Calories Burned" />

                    <TextView
                        android:id="@+id/dashboard_user_distance_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Distance" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/dashboard_location_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location History" />




</androidx.appcompat.widget.LinearLayoutCompat>